# JUCE_sequencer

./: .gitignore  CMakeLists.txt  MIDI_SEQUENCER_SPEC.md
Source/: Main.cpp  SequencerEngine.cpp  SequencerEngine.h  StepColumn.cpp  StepColumn.h
